# Fillit

./: .gitignore  CMakeLists.txt  Fillit.h  Makefile  README.md  auteur  changelog.md  display.c  error_checker.c  fillit  fillit.h  main.c  map.c  map_runner.sh  parse_tools.c  parser.c  reader.c  runner.sh  solver.c  solver_tools.c  toolbox.c  utils_tools.c
Libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstaddend.c  ft_lstat.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstrev.c  ft_lstsize.c  ft_max.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_power.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_puttab.c  (+29 more)
map/: 10,8s.fillit  12,04s.fillit  13,1s.fillit  16,2s.fillit  28,97s.fillit  4,7s.fillit  51,65s.fillit  7,4s.fillit  9s.fillit  less_hash.fillit  less_hash_00.fillit  more_hash.fillit
srcs/: parse_tools.c  solver.c  utils_tools.c
